<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView
        android:id="@+id/mes_actual"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:singleLine="true"
        android:gravity="center|top"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="14sp"></TextView>
    
 <Button android:text="@string/boton_verdura"
        android:id="@+id/Button02"
        android:layout_width="fill_parent"
        android:textSize="15dp"
        android:gravity="center|center"
        android:layout_height="55dp">
        
</Button>
<Button android:text="@string/boton_fruta"
        android:id="@+id/Button03"
        android:layout_width="fill_parent"
        android:textSize="15dp"
        android:gravity="center|center"
        android:layout_height="55dp">
</Button>
<Button android:text="@string/boton_pescado"
        android:id="@+id/Button04"
        android:layout_width="fill_parent"
        android:textSize="15dp"
        android:gravity="center|center"
        android:layout_height="55dp">
</Button>
<Button android:text="@string/boton_frutos_secos"
        android:id="@+id/Button05"
        android:layout_width="fill_parent"
        android:textSize="15dp"
        android:gravity="center|center"
        android:layout_height="55dp">
</Button>
<Button android:text="@string/boton_carne"
        android:id="@+id/Button06"
        android:layout_width="fill_parent"
        android:textSize="15dp"
        android:gravity="center|center"
        android:layout_height="55dp">
</Button>
</LinearLayout>